--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: Helvetica;
 }
 
 .topbar {
@@ -18,8 +19,7 @@ ul {
 }
 
 li {
-  font-size: 2rem;
-  font-family: Helvetica;
+  font-size: 3rem;
   list-style: none;
   color: gray;
 }
@@ -35,7 +35,6 @@ a:hover {
   min-height: 60vw;
   min-width: 100%;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -59,30 +58,17 @@ a:hover {
   align-items: center;
   
 }
-h1, h2, h3 {
-  font-family: Helvetica;
+h1, h2, h3, p {
   font-size: 3rem;
   text-align: center;
   color: gray;
 }
 
 
-#tiles {
+#tiles, #links {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 10%;
-  line-height: 60px;
-}
-
-p {
-  font-family: Helvetica;
-  font-size: 2rem;
-}
-#links {
-  font-family: Helvetica;
-  text-align: center;
-  color: gray;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
   margin-top: 10%;
   line-height: 60px;
 }
@@ -103,12 +89,17 @@ p {
   
   h1, h2, h3, p {
   font-family: Helvetica;
-  font-size: 1rem;
+  font-size: 2rem;
   text-align: center;
   color: gray;
   }
 
   li {
-    font-size: 1rem
+    font-size: 2rem
+  }
+
+  #tiles, #links {
+    display: flex;
+    flex-direction: column;
   }
 }
